# pFinanceML

EncodingData/: AutoEncoderModels.py  EncondingTest.ipynb  ZigZagTranformation.py
QuotesDownloader/: setup.cfg  setup.py
QuotesDownloader/src/QuotesDownloader/: SoftfxDownloader.py  __init__.py
